--- a/index.html
+++ b/index.html
@@ -935,6 +935,11 @@
         </div>
     </footer>
 
+    <div class="hidden py-1 px-1">
+        <div class="w-1/2 pr-1"></div>
+        <div class="w-1/4 pl-1"></div>
+    </div>
+
     <div itemscope itemtype="https://schema.org/Organization" class="hidden">
         <meta itemprop="name" content="Первый Сервисный Центр" />
         <link itemprop="url" href="https://первый-сервис.рф" />
@@ -952,7 +957,6 @@
         </div>
     </div>
 
-    <script src="./dist/vendors-node_modules_glidejs_glide_dist_glide_esm_js-node_modules_axios_index_js-node_modules-1ce152.bundle.js"></script>
     <script src="./dist/app.bundle.js" async></script>
 </div>
 </body>
